[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu/NetworkLogin.gd" type="Script" id=1]

[node name="Main" type="Node2D"]

[node name="NetworkLogin" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 603.0
script = ExtResource( 1 )

[node name="MainPanel" type="VBoxContainer" parent="NetworkLogin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -50.5
margin_right = 116.0
margin_bottom = 50.5

[node name="LineEdit" type="LineEdit" parent="NetworkLogin/MainPanel"]
margin_right = 232.0
margin_bottom = 31.0
size_flags_vertical = 3
placeholder_text = "IP Address"

[node name="HostButton" type="Button" parent="NetworkLogin/MainPanel"]
margin_top = 35.0
margin_right = 232.0
margin_bottom = 66.0
size_flags_vertical = 3
text = "Host"

[node name="JoinButton" type="Button" parent="NetworkLogin/MainPanel"]
margin_top = 70.0
margin_right = 232.0
margin_bottom = 101.0
size_flags_vertical = 3
text = "Join"

[connection signal="text_changed" from="NetworkLogin/MainPanel/LineEdit" to="NetworkLogin" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="NetworkLogin/MainPanel/HostButton" to="NetworkLogin" method="_on_HostButton_pressed"]
[connection signal="pressed" from="NetworkLogin/MainPanel/JoinButton" to="NetworkLogin" method="_on_JoinButton_pressed"]
